[project]
name = "fake-systemd-python"
version = "0.0.1"
description = ""
authors = [
    {name = "Pétur Ingi Egilsson",email = "petur@ingi.dk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
